# ml_redo

./: .gitattributes  .gitignore  build_makemore_backprop_ninja.ipynb  jax_try.py  makemore.ipynb  makemore_part5_cnn1.ipynb  micrograd.ipynb  notebook1_all_notebooks_updated.aux  notebook1_all_notebooks_updated.toc  ppo.py  transformer.ipynb
copy/oncology-sbi-pkpd/: .gitignore  README.md  environment.yml  pyproject.toml
copy/oncology-sbi-pkpd/configs/: default.yaml
copy/oncology-sbi-pkpd/sbi-logs/NPE_C/2026-05-14T12_36_17.748993/: events.out.tfevents.1778754977.DESKTOP-DC9GPV9.12844.0
copy/oncology-sbi-pkpd/sbi-logs/NPE_C/2026-05-14T12_45_58.947255/: events.out.tfevents.1778755558.DESKTOP-DC9GPV9.10748.0
copy/oncology-sbi-pkpd/sbi-logs/NPE_C/2026-05-14T17_30_53.163808/: events.out.tfevents.1778772653.DESKTOP-DC9GPV9.14124.0
copy/oncology-sbi-pkpd/sbi-logs/NPE_C/2026-05-14T23_07_09.697396/: events.out.tfevents.1778792829.DESKTOP-DC9GPV9.17924.0
copy/oncology-sbi-pkpd/src/pkpd_sbi/data/: clinical_loaders.py  synthetic.py
copy/oncology-sbi-pkpd/src/pkpd_sbi/experiments/: inspect_clinical_datasets.py  smoke_simulate.py  train_and_evaluate.py  train_npe_real_conditioned.py
copy/oncology-sbi-pkpd/src/pkpd_sbi/inference/: npe.py  summaries.py
copy/oncology-sbi-pkpd/src/pkpd_sbi/simulators/: dosing.py  observation.py  priors.py  simeoni.py
copy/oncology-sbi-pkpd/src/pkpd_sbi/validation/: coverage.py  plots.py  sbc.py
copy/oncology-sbi-pkpd/tests/: test_clinical_loaders.py  test_jax.py  test_npe_real_conditioned.py  test_simulator.py  test_summaries.py
(+26 files in other folders)
